# pcg-breaker

./: .gitignore  Cargo.toml  README.md
src/: gen-table.rs  pcg-breaker.rs
util/: pcg.c
