[package]
name = "pcg-breaker"
version = "0.1.0"
edition = "2018"
publish = false
license = "MIT"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Output prediction for PCG-XSH-RR"

[[bin]]
name = "gen-table"
path = "src/gen-table.rs"

[[bin]]
name = "pcg-breaker"
path = "src/pcg-breaker.rs"

[dependencies.bytemuck]
version = "1.2"

[dependencies.itertools]
version = "0.8"

[dependencies.parse_int]
version = "0.4"

[dependencies.structopt]
version = "0.3"

[profile.release]
debug = true
